--- a/app/index.html
+++ b/app/index.html
@@ -1,37 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Order Form</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>ng order form</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
-<!-- Declare a new AngularJS app and associate the controller -->
-<form ng-app="app" ng-controller="OrderFormController">
-
-  <h1>Services</h1>
-
-  <ul>
-    <!-- Loop through the services array, assign a click handler, and set or
-      remove the "active" css class if needed -->
-    <li ng-repeat="service in services" ng-click="toggleActive(service)" ng-class="{active:service.active}">
-      <!-- Notice the use of the currency filter, it will format the price -->
-      {{service.name}} <span>{{service.price | currency}}</span>
-    </li>
-  </ul>
-
-  <div class="total">
-    <!-- Calculate the total price of all chosen services. Format it as currency. -->
-    Total: <span>{{total() | currency}}</span>
+<body ng-app="app">
+  <div id="main">
+    <div ng-controller="serviceController">
+      <h1>Services</h1>
+      <div id="services">
+        
+          <div class="service" toggle="service" ng-repeat="service in services">
+       <!--      <h2>{{service.name}}</h2>
+            <p>{{service.price | currency : "$" : 2}}</p> -->
+          </div>
+      </div>
+      <div id="total">
+        <h2>Total:</h2><p>00.00</p>
+      </div>
+    </div>
   </div>
-
-</form>
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-<script src="main.js"></script>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <script src="main.js"></script>
 
 </body>
 </html>
